compatibility with Java version 11 and newer